<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="fill_parent"
              android:layout_height="fill_parent" android:id="@+id/MainLayout"
              android:background="@drawable/bg_tile">
              
    <ImageView android:id="@+id/title"
        	  android:layout_height="wrap_content"
        	  android:contentDescription="Forgot Mobile Title"
        	  android:layout_width="fill_parent"
        	  android:layout_marginTop="3dp"
        	  android:src="@drawable/title"
        	  android:layout_gravity="center_horizontal"/>
    <LinearLayout  android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
         >          
	    <TableLayout android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dp"
	        android:layout_marginRight="3dp"
	        android:layout_marginTop="30dp"
	        android:layout_marginBottom="30dp">
	        <TableRow>
			    <TextView android:id="@+id/passcodeLbl"
			        	  android:text="@string/passcode"
			        	  android:minHeight="30dp"
			        	  android:textColor="@color/text_color"
			        	  android:layout_height="wrap_content"
			        	  android:layout_width="wrap_content"
			        	  android:layout_marginRight="5dp"
			        	  />
			    <EditText android:id="@+id/passcode"
			        	  android:ems="10"
			        	  android:layout_height="wrap_content"
			              android:layout_width="fill_parent"
			              android:inputType="number"
			              android:layout_marginTop="10dp"
			              android:layout_margin="2dip" 
			              android:singleLine="true"
			              android:selectAllOnFocus="true"
			              android:hint="@string/passcodeHint"/>
			</TableRow>
            <TableRow>
                <TextView android:id="@+id/desc"
                    android:text="@string/desc"
                    android:layout_span="2"
                    android:minHeight="40dp"
                    android:textSize="12sp"
                    android:textColor="@color/subtext_color"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    />
            </TableRow>
			<TableRow>
				 <TextView android:id="@+id/autoFwdLbl"
	          	 android:text="@string/enableAutoFwd"
	          	 android:layout_height="wrap_content"
	          	 android:layout_width="wrap_content"
                 android:visibility="invisible"
	          	 />    
	             <CheckBox android:id="@+id/autoForward"
	             android:layout_height="wrap_content"
	          	 android:layout_width="wrap_content"
                 android:visibility="invisible"
                     />
			</TableRow>
	    </TableLayout>
	   	<Button android:id="@+id/savePreferences"
	        	android:layout_height="wrap_content"
	        	android:layout_width="match_parent"
	        	android:layout_marginTop="10dp"
	        	android:layout_marginBottom="20dp" 
	        	android:layout_marginLeft="3dp"
	        	android:layout_marginRight="3dp"        	
				android:text="@string/savePreferences"/>
    </LinearLayout>
</LinearLayout>